--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avani's Portfolio</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="C:\Users\SETHIA\Pictures\Saved Pictures\favicon.ico"
+    />
   </head>
   <body>
     Hi, I am Avani
