--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
   </head>
   <body>
     Hi, I am Avani I am trying to learn development.
+
+    <p>
+      hobbies
+      <br />
+      writing reading
+    </p>
   </body>
 </html>
