--- a/index.html
+++ b/index.html
@@ -12,12 +12,31 @@
     />
   </head>
   <body>
-    Hi, I am Avani I am trying to learn development.
-
-    <p>
-      hobbies
-      <br />
-      writing reading
-    </p>
+    <header>
+      <img src="images/homeimage.svg" alt="homeimage" />
+      <h2>I am a Developer</h2>
+    </header>
+    <nav>
+      <div><h2>avani</h2></div>
+      <ul>
+        <li>
+          <a href="#Home"> Home</a>
+        </li>
+        <li>
+          <a href="#Projects">Projects</a>
+        </li>
+        <li>
+          <a href="#AboutMe">About Me</a>
+        </li>
+        <li>
+          <a href="#Blogs">Blogs</a>
+        </li>
+      </ul>
+    </nav>
+    <h1>Hi, I am Avani</h1>
+    <h3>I am learning Development</h3>
+    <p>Check my projects here- <a href="#Projects">Projects </a></p>
+    <hr />
+    <footer>This is footer</footer>
   </body>
 </html>
