--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="C:\Users\SETHIA\Pictures\Saved Pictures\favicon.ico"
+      href="C:\Users\SETHIA\Pictures\Saved Pictures\fa vicon.ico"
     />
+    <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
