style.css updated

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <h2>I am a Developer</h2>
     </header>
     <nav>
-      <div><h2>avani</h2></div>
-      <ul>
+      <div></div><h2>avani</h2></div>
+      <ul class="not-bullet">
         <li>
-          <a href="#Home"> Home</a>
+          <a class="no-underline>"href="#Home"> Home</a>
         </li>
         <li>
           <a href="#Projects">Projects</a>
