style.css updated

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
   </head>
   <body>
     <header>
+      <nav class="navigation-container">
+        <div><h2>avani</h2></div>
+        <ul class="not-bullet">
+          <li class="list-inline">
+            <a class="link-tag" href="#Home">Home</a>
+          </li>
+          <li class="list-inline">
+            <a class="link-tag" href="#Projects">Projects</a>
+          </li>
+          <li class="list-inline">
+            <a class="link-tag" href="#AboutMe">About Me</a>
+          </li>
+          <li class="list-inline">
+            <a class="link-tag" href="#Blogs">Blogs</a>
+          </li>
+        </ul>
+      </nav>
       <img src="images/homeimage.svg" alt="homeimage" />
       <h2>I am a Developer</h2>
     </header>
-    <nav>
-      <div></div><h2>avani</h2></div>
-      <ul class="not-bullet">
-        <li>
-          <a class="no-underline>"href="#Home"> Home</a>
-        </li>
-        <li>
-          <a href="#Projects">Projects</a>
-        </li>
-        <li>
-          <a href="#AboutMe">About Me</a>
-        </li>
-        <li>
-          <a href="#Blogs">Blogs</a>
-        </li>
-      </ul>
-    </nav>
     <h1>Hi, I am Avani</h1>
     <h3>I am learning Development</h3>
     <p>Check my projects here- <a href="#Projects">Projects </a></p>
