--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <img src="images/mainimg.svg" alt="homeimage" />
+      <img src="images\homeimage.svg" alt="homeimage" />
       <h2>I am a Developer</h2>
     </header>
     <h1>Hi, I am Avani</h1>
