nav changes added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav class="navigation-container">
-        <div><h2>avani</h2></div>
-        <ul class="not-bullet">
+      <nav class="navigation container">
+        <div class="nav-brand"><h2>avani</h2></div>
+        <ul class="not-bullet nav-pills">
           <li class="list-inline">
             <a class="link-tag" href="#Home">Home</a>
           </li>
