--- a/index.html
+++ b/index.html
@@ -13,31 +13,66 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <nav class="navigation container">
-        <div class="nav-brand"><h2>avani</h2></div>
-        <ul class="not-bullet nav-pills">
-          <li class="list-inline">
-            <a class="link-tag" href="#Home">Home</a>
-          </li>
-          <li class="list-inline">
-            <a class="link-tag" href="#Projects">Projects</a>
-          </li>
-          <li class="list-inline">
-            <a class="link-tag" href="#AboutMe">About Me</a>
-          </li>
-          <li class="list-inline">
-            <a class="link-tag" href="#Blogs">Blogs</a>
-          </li>
-        </ul>
-      </nav>
-      <img src="images\homeimage.svg" alt="homeimage" />
-      <h2>I am a Developer</h2>
+    <nav class="navigation container">
+      <div class="nav-brand"><h2>avani</h2></div>
+      <ul class="not-bullet nav-pills">
+        <li class="list-inline">
+          <a class="link-tag" href="#Home">Home</a>
+        </li>
+        <li class="list-inline">
+          <a class="link-tag" href="#Projects">Projects</a>
+        </li>
+        <li class="list-inline">
+          <a class="link-tag" href="#AboutMe">About Me</a>
+        </li>
+        <li class="list-inline">
+          <a class="link-tag" href="#Blogs">Blogs</a>
+        </li>
+      </ul>
+    </nav>
+    <header class="hero">
+      <img class="hero-img" src="images\homeimage.svg" alt="homeimage" />
+      <h1 class="hero-heading">
+        Hi, I am Avani. <br />
+        <span class="hero-highlighted">I am a Developer</span>
+      </h1>
     </header>
-    <h1>Hi, I am Avani</h1>
-    <h3>I am learning Development</h3>
-    <p>Check my projects here- <a href="#Projects">Projects </a></p>
-    <hr />
-    <footer>This is footer</footer>
+    <section class="tech">
+      <h3>technologies</h3>
+      <p>HTML5 CSS3 Git JavaScript NodeJS ReactJS C++</p>
+      <p>
+        Check my projects here-
+        <a class="sec-link" href="#Projects">Projects </a>
+      </p>
+      <br />
+    </section>
+    <section class="blogs-list">
+      <p>you can check out these blogs,</p>
+    </section>
+    <footer class="foot">
+      <ul class="social-link">
+        <li class="list-inline-f">
+          <a class="socio" href="https://github.com/sia1504" target="_blank"
+            ><img class="socio-image" src="images\GitHub.svg"
+          /></a>
+        </li>
+        <li class="list-inline-f">
+          <a
+            class="socio"
+            href="https://www.linkedin.com/in/avani-sethia-84b64621b/"
+            target="_blank"
+            ><img class="socio-image" src="images\LinkedIn.svg"</a
+          >
+        </li>
+        <li class="list-inline-f">
+          <a
+            class="socio"
+            href="https://www.instagram.com/avani._.sethia/?next=%2F"
+            target="_blank"
+            ><img class="socio-image" src="images\Instagram.svg"
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
