project,blogs page added

--- a/index.html
+++ b/index.html
@@ -14,19 +14,27 @@
   </head>
   <body>
     <nav class="navigation container">
-      <div class="nav-brand"><h2>avani</h2></div>
+      <div><img class="nav-brand" src="images\signature.png" /></div>
       <ul class="not-bullet nav-pills">
         <li class="list-inline">
           <a class="link-tag" href="#Home">Home</a>
         </li>
         <li class="list-inline">
-          <a class="link-tag" href="#Projects">Projects</a>
+          <a
+            class="link-tag"
+            href="C:\Users\SETHIA\Documents\GitHub\Avani-s-Portfolio\projects.html"
+            >Projects</a
+          >
         </li>
         <li class="list-inline">
-          <a class="link-tag" href="#AboutMe">About Me</a>
+          <a class="link-tag" href="/about.html">About Me</a>
         </li>
         <li class="list-inline">
-          <a class="link-tag" href="#Blogs">Blogs</a>
+          <a
+            class="link-tag"
+            href="C:\Users\SETHIA\Documents\GitHub\Avani-s-Portfolio\blogs.html"
+            >Blogs</a
+          >
         </li>
       </ul>
     </nav>
@@ -34,25 +42,37 @@
       <img class="hero-img" src="images\homeimage.svg" alt="homeimage" />
       <h1 class="hero-heading">
         Hi, I am Avani. <br />
-        <span class="hero-highlighted">I am a Developer</span>
+        <span class="hero-highlighted">Web Developer</span>
+        <p>
+          I build interactive websites that can run <br />
+          across platforms & devices
+        </p>
       </h1>
     </header>
     <section class="tech">
-      <h3>technologies</h3>
+      <h3 class="heading">technologies</h3>
       <p>HTML5 CSS3 Git JavaScript NodeJS ReactJS C++</p>
+    </section>
+    <section class="projects">
+      <h3 class="heading">projects</h3>
       <p>
-        Check my projects here-
-        <a class="sec-link" href="#Projects">Projects </a>
+        you can check my
+        <a class="sec-link" href="/projects.html">Projects </a> here
       </p>
-      <br />
     </section>
     <section class="blogs-list">
-      <p>you can check out these blogs,</p>
+      <h3 class="heading">blogs</h3>
+      <p>you can check out the blogs,</p>
+      <a class="sec-link" href="/blogs.html">read blogs</a>
     </section>
     <footer class="foot">
       <ul class="social-link">
         <li class="list-inline-f">
-          <a class="socio" href="https://github.com/sia1504" target="_blank"
+          <a
+            class="socio"
+            href="https://github.com/sia1504"
+            target="_blank"
+            title="Follow on GitHub"
             ><img class="socio-image" src="images\GitHub.svg"
           /></a>
         </li>
@@ -61,15 +81,17 @@
             class="socio"
             href="https://www.linkedin.com/in/avani-sethia-84b64621b/"
             target="_blank"
-            ><img class="socio-image" src="images\LinkedIn.svg"</a
-          >
+            title="Connect on LinkedIn"
+            ><img class="socio-image" src="images\LinkedIn.svg" />
+          </a>
         </li>
         <li class="list-inline-f">
           <a
             class="socio"
             href="https://www.instagram.com/avani._.sethia/?next=%2F"
             target="_blank"
-            ><img class="socio-image" src="images\Instagram.svg"
+            title="Follow on Instagram"
+            ><img class="socio-image" src="images\Instagram.svg" />
           </a>
         </li>
       </ul>
