--- a/index.html
+++ b/index.html
@@ -17,24 +17,16 @@
       <div><img class="nav-brand" src="images\signature.png" /></div>
       <ul class="not-bullet nav-pills">
         <li class="list-inline">
-          <a class="link-tag" href="#Home">Home</a>
+          <a class="link-tag" href="/">Home</a>
         </li>
         <li class="list-inline">
-          <a
-            class="link-tag"
-            href="C:\Users\SETHIA\Documents\GitHub\Avani-s-Portfolio\projects.html"
-            >Projects</a
-          >
+          <a class="link-tag" href="/projects.html">Projects</a>
         </li>
         <li class="list-inline">
           <a class="link-tag" href="/about.html">About Me</a>
         </li>
         <li class="list-inline">
-          <a
-            class="link-tag"
-            href="C:\Users\SETHIA\Documents\GitHub\Avani-s-Portfolio\blogs.html"
-            >Blogs</a
-          >
+          <a class="link-tag" href="/blogs.html">Blogs</a>
         </li>
       </ul>
     </nav>
