--- a/blogs.html
+++ b/blogs.html
@@ -8,22 +8,26 @@
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navigation container">
-      <div><img class="nav-brand" src="images\signature.png" /></div>
-      <ul class="not-bullet nav-pills">
-        <li class="list-inline">
-          <a class="link-tag" href="#Home">Home</a>
-        </li>
-        <li class="list-inline">
-          <a class="link-tag" href="/projects.html">Projects</a>
-        </li>
-        <li class="list-inline">
-          <a class="link-tag" href="/about.html">About Me</a>
-        </li>
-        <li class="list-inline">
-          <a class="link-tag" href="/blogs.html">Blogs</a>
-        </li>
-      </ul>
+    <nav class="navigation">
+      <div class="navigation-container">
+        <img class="nav-brand flex" src="images\signature.png" />
+        <div class="nav-pills">
+          <ul class="not-bullet">
+            <li class="list-inline">
+              <a class="link-tag-home" href="/">Home</a>
+            </li>
+            <li class="list-inline">
+              <a class="link-tag" href="/projects.html">Projects</a>
+            </li>
+            <li class="list-inline">
+              <a class="link-tag" href="/blogs.html">Blogs</a>
+            </li>
+            <li class="list-inline">
+              <a class="link-tag-last" href="/contact.html">Say Hi</a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
     <header class="hero">
       <h1 class="hero-heading">
