styles.css updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="link-tag" href="/blogs.html">Blogs</a>
             </li>
             <li class="list-inline">
-              <a class="link-tag-last" href="/contact.html">Say Hi</a>
+              <a class="link-tag-last" href="/contact.html">Say Hi!</a>
             </li>
           </ul>
         </div>
@@ -47,7 +47,28 @@
     </header>
     <section class="tech">
       <h3 class="heading">technologies</h3>
-      <p>HTML5 CSS3 Git JavaScript NodeJS ReactJS C++</p>
+      <div class="tech-stack-main">
+        <div class="tech-stack">
+          <img class="tech-img" src="images\html-5.svg" />
+          <span class="tech-pills">HTML5</span>
+        </div>
+        <div class="tech-stack">
+          <img class="tech-img" src="images\css3.svg" />
+          <span class="tech-pills">CSS3</span>
+        </div>
+        <div class="tech-stack">
+          <img class="tech-img" src="images\git.svg" />
+          <span class="tech-pills">Git</span>
+        </div>
+        <div class="tech-stack">
+          <img class="tech-img" src="images\javascript.svg" />
+          <span class="tech-pills">JavaScript</span>
+        </div>
+        <div class="tech-stack">
+          <img class="tech-img" src="images\react.svg" />
+          <span class="tech-pills">React</span>
+        </div>
+      </div>
     </section>
     <section class="projects">
       <h3 class="heading">projects</h3>
