blogs page updated

--- a/blogs.html
+++ b/blogs.html
@@ -30,9 +30,8 @@
       </div>
     </nav>
     <header class="hero">
-      <h1 class="hero-heading">
-        My Blogs <br />
-        <span class="hero-highlighted"></span>
+      <h1 class="hero-heading-blog">
+        <span class="blog-highlighted"> my blogs </span>
       </h1>
     </header>
   </body>
