--- a/blogs.html
+++ b/blogs.html
@@ -29,10 +29,19 @@
         </div>
       </div>
     </nav>
-    <header class="hero">
-      <h1 class="hero-heading-blog">
-        <span class="blog-highlighted"> my blogs </span>
-      </h1>
-    </header>
+    <div class="blogs-main">
+      <header class="hero">
+        <h1 class="hero-heading-blog">
+          <span class="blog-highlighted"> my blogs </span>
+        </h1>
+      </header>
+      <div class="blogs">
+        <div class="blog-no">
+          <h1>title</h1>
+          <p></p>
+          <a href=""></a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
