--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="C:\Users\SETHIA\Pictures\Saved Pictures\fa vicon.ico"
     />
     <link href="styles.css" rel="stylesheet" />
+    <script src="app.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="navigation">
@@ -82,6 +83,7 @@
       <p>you can check out the blogs,</p>
       <a class="sec-link" href="/blogs.html">read blogs</a>
     </section>
+    <div class="faded-text">developer</div>
     <footer class="foot">
       <ul class="social-link">
         <li class="list-inline-f">
