--- a/projects.html
+++ b/projects.html
@@ -35,6 +35,6 @@
         <span class="hero-highlighted"></span>
       </h1>
     </header>
-    <h2>coming up!</h2>
+    <h2 class="text_project">coming up!</h2>
   </body>
 </html>
