style sheet updated

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="C:\Users\SETHIA\Pictures\Saved Pictures\fa vicon.ico"
     />
     <link href="styles.css" rel="stylesheet" />
-    <script src="app.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="navigation">
@@ -20,7 +20,7 @@
         <div class="nav-pills">
           <ul class="not-bullet">
             <li class="list-inline">
-              <a class="link-tag-home" href="/">Home</a>
+              <a class="link-tag" href="/">Home</a>
             </li>
             <li class="list-inline">
               <a class="link-tag" href="/projects.html">Projects</a>
@@ -29,7 +29,7 @@
               <a class="link-tag" href="/blogs.html">Blogs</a>
             </li>
             <li class="list-inline">
-              <a class="link-tag-last" href="/contact.html">Say Hi!</a>
+              <a class="link-tag" href="/contact.html">Say Hi!</a>
             </li>
           </ul>
         </div>
