--- a/blogs.html
+++ b/blogs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Avani-s-blogs</title>
     <link href="styles.css" rel="stylesheet" />
+    <script src="script.js" type="text/javascript"></script>
   </head>
   <body>
     <nav class="navigation">
@@ -14,7 +15,7 @@
         <div class="nav-pills">
           <ul class="not-bullet">
             <li class="list-inline">
-              <a class="link-tag-home" href="/">Home</a>
+              <a class="link-tag" href="/">Home</a>
             </li>
             <li class="list-inline">
               <a class="link-tag" href="/projects.html">Projects</a>
@@ -38,8 +39,8 @@
       <div class="blogs">
         <div class="blog-no">
           <h1>title</h1>
-          <p></p>
-          <a href=""></a>
+          <p>Initial text...</p>
+          <button type="button" onclick="readblog()">read more...</button>
         </div>
       </div>
     </div>
