--- a/blogs.html
+++ b/blogs.html
@@ -24,7 +24,7 @@
               <a class="link-tag" href="/blogs.html">Blogs</a>
             </li>
             <li class="list-inline">
-              <a class="link-tag-last" href="/contact.html">Say Hi</a>
+              <a class="link-tag" href="/contact.html">Say Hi!</a>
             </li>
           </ul>
         </div>
