--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
         <div class="nav-pills">
           <ul class="not-bullet">
             <li class="list-inline">
-              <a class="link-tag-home" href="/">Home</a>
+              <a class="link-tag" href="/">Home</a>
             </li>
             <li class="list-inline">
               <a class="link-tag" href="/projects.html">Projects</a>
@@ -23,7 +23,7 @@
               <a class="link-tag" href="/blogs.html">Blogs</a>
             </li>
             <li class="list-inline">
-              <a class="link-tag-last" href="/contact.html">Say Hi</a>
+              <a class="link-tag" href="/contact.html">Say Hi!</a>
             </li>
           </ul>
         </div>
