--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
           </ul>
         </div>
       </div>
+      <button id="toggle" onclick="myFunction()"></button>
     </nav>
+
     <header class="hero">
       <img class="hero-img" src="images\homeimage.svg" alt="homeimage" />
       <h1 class="hero-heading">
