--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="link-tag" href="/">Home</a>
             </li>
             <li class="list-inline">
-              <a class="link-tag" href="/projects.html">Projects</a>
+              <a class="link-tag" href="#projects">Projects</a>
             </li>
             <li class="list-inline">
               <a class="link-tag" href="/blogs.html">Blogs</a>
@@ -34,7 +34,6 @@
           </ul>
         </div>
       </div>
-      <button id="toggle" onclick="myFunction()"></button>
     </nav>
 
     <header class="hero">
@@ -48,6 +47,34 @@
         </p>
       </h1>
     </header>
+    <section class="about">
+      <div class="img_about">
+        <img class="img_me" src="images/my.jpg" />
+      </div>
+      <div class="text_about">
+        <h1 class="hero-highlighted">About Me</h1>
+        <p>
+          Hello! I'm a third-year student and a beginner web developer with
+          experience in HTML, CSS, JavaScript, React.js, Tailwind CSS, and
+          Redux. I'm passionate about creating engaging and functional websites
+          that provide value to users.
+        </p>
+        <p>
+          Aside from my technical skills, I also have a keen interest in
+          writing.
+        </p>
+        <p>
+          As I continue to learn and grow as a web developer and writer, I am
+          excited to take on new challenges and explore the endless
+          possibilities that these fields have to offer.
+        </p>
+        <p>
+          I'm always looking for opportunities to improve my skills and
+          collaborate with others, so feel free to reach out and connect with
+          me.
+        </p>
+      </div>
+    </section>
     <section class="tech">
       <h3 class="heading">technologies</h3>
       <div class="tech-stack-main">
